--- a/page-drafts/gradio.mdx
+++ b/page-drafts/gradio.mdx
@@ -2,4 +2,6 @@ import GradioApp from '@/components/Gradio.jsx';
 
 # GradioApp
 
-<GradioApp />
+## Demo
+
+<Gradio notebookPath="text/fuzzy_distance.ipynb" />
