add fuzzy demo workbook

--- a/pages/tasks/nlp/fuzzy-match/text_distance.mdx
+++ b/pages/tasks/nlp/fuzzy-match/text_distance.mdx
@@ -4,6 +4,10 @@ Uses the Python [textdistance](https://github.com/life4/textdistance) library wh
 
 ## Usage
 
+### Demo Workbook
+
+See this [workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/Eb_nCI4mR6tImGx_S1hPVs8B4UYmrJRrkk0_Grai6A4adg?e=xfUuNQ) for demos of all fuzzy matching functions.
+
 ### BOARDFLARE.RUNPY
 
 `text_distance` compares `lookup_value(s)` with a `lookup_array` and returns the index of the closest match and a normalized similarity score (within a given algorithm) between 0 and 1 (higher is more similar).  It is basically a fuzzy matching version Excel's `XMATCH` function.
