add fuzzy demo to app page

--- a/pages/apps/excel/python.mdx
+++ b/pages/apps/excel/python.mdx
@@ -194,6 +194,8 @@ def extract_email(text):
 extract_email(arg1)
 ```
 
+See this [workbook](https://whistlernetworks.sharepoint.com/:x:/s/Boardflare/Eb_nCI4mR6tImGx_S1hPVs8B4UYmrJRrkk0_Grai6A4adg?e=xfUuNQ) for demos of fuzzy matching functions and showing their use relative to Excel's native `PY` feature.
+
 ## Use Cases
 
 Some key use-cases we see are as follows:
